# career-images

./: .dockerignore  .gitignore  .replit  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  STATUS.md  app.py  audit.py  career_classes.json  commons.py  db.py  fetcher.py  fly.toml  gsheets.py  list-enrich.py  list-fetcher.py  llm-image-diversity-plan.md  main.py  migrate_add_no_picture.py  openverse.py  pyproject.toml  service.template  spec.md  wiki-claude.sh  wiki-shell.sh  wikipedia.py
.beads/: beads.left.jsonl  beads.left.meta.json  issues.jsonl  last-touched
.chainlink/: issues.db  issues.json
.claude/: settings.json  settings.local.json
.devcontainer/: devcontainer.json
analysis/career-cliff/: README.md  blog_charts.py  compute_rankings.py  fetch_history.py  history_db.py  init_db.py  pageviews_api.py  report.py  schema.sql
analysis/historical-decline/: README.md  blog_charts.py  compute_rankings.py  fetch_history.py  history_db.py  init_db.py  pageviews_api.py  rankings.py  report.py  schema.sql
docs/: NPOV_IMAGES.md  toolforge-deployment.md
migrations/: migrate_add_commons_category.py  migrate_add_commons_status.py  migrate_statuses.py
scripts/: wiki-shell.sh
static/: manifest.json  sw.js
templates/: base.html  career_detail.html  commons_index.html  commons_review.html  index.html  quick_review.html
tests/: conftest.py  test_app.py  test_commons.py  test_db.py  test_historical_db.py  test_historical_fetch.py  test_historical_pageviews_api.py  test_historical_rankings.py  test_historical_report.py  test_openverse.py
(+34 files in other folders)
