[project]
name = "career-images"
version = "0.1.0"
description = "Python tool to improve human diversity in photos used in English Wikipedia articles about jobs and careers"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "flask>=3.0.0",
    "gspread>=6.0.0",
    "gunicorn>=21.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
