[project]
name = "career-images"
version = "0.1.0"
description = "Python tool to improve human diversity in photos used in English Wikipedia articles about jobs and careers"
requires-python = ">=3.13"
# SECURITY: Pin dependencies to exact versions to prevent supply chain attacks
# Run `uv lock --upgrade` periodically to update, then test before deploying
dependencies = [
    "requests==2.32.3",
    "aiohttp==3.11.11",
    "flask==3.1.0",
    "gspread==6.1.4",
    "gunicorn==23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "responses==0.25.3",
]
# Note: Toolforge deployment requires pymysql and toolforge packages,
# which are installed separately on Toolforge (not available on PyPI)

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
